# XplorerEditor

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  Xplorer.sln
.github/agents/: csharp-dotnet-janitor.agent.md  repo-architect.agent.md  se-security-reviewer.agent.md  se-system-architecture-reviewer.agent.md  tdd-green.agent.md  tdd-red.agent.md  tdd-refactor.agent.md
.github/instructions/: agnos-sw-eng.v1.instructions.md  agnos-sw-eng.v2.instructions.md  csharp.instructions.md  dotnet-architecture-good-practices.instructions.md  dotnet-wpf.instructions.md  expert-dotnet-software-engineer.agent.md  security-and-owasp.instructions.md  self-explanatory-code-commenting.instructions.md
.github/prompts/: breakdown-feature-implementation.prompt.md  create-architectural-decision-record.prompt.md  create-specification.prompt.md  csharp-async.prompt.md  csharp-docs.prompt.md  csharp-xunit.prompt.md  dotnet-best-practices.prompt.md  dotnet-design-pattern-review.prompt.md  refactor-method-complexity-reduce.prompt.md  review-and-refactor.prompt.md
.github/workflows/: build.yml  codeql.yml  juce-ci.yml  juce-windows.yml  release.yml
.grepai/: config.yaml  stats.json  symbols.gob
Visio/: 11.02.26.VisioXPander.Backup.VSD  VisioXPander.VSD  VisioXPander.VSD.old
Xplorer/: Program.cs  Settings.cs  Xplorer.csproj  app.config  oberheim.syx
Xplorer/Common/: SysexFileType.cs  XpanderConstants.cs  XplorerConstants.cs
Xplorer/Controller/: AllDataDumpRequestState.cs  PageSubPageHelper.cs  SinglePatchIterator.cs  XpanderController.Clipboard.cs  XpanderController.MIDIEvents.cs  XpanderController.ModulationMatrix.cs  XpanderController.WorkerThread.cs  XpanderController.cs
Xplorer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Xplorer/View/: AboutForm.Designer.cs  AboutForm.cs  ExtractSingleToneForm.Designer.cs  (+22 more)
docs/: architecture-analysis.md  architecture-analysis_juce.md  design-system-template.md
juce/: CMakeLists.txt  license-header.txt
juce/app/: CMakeLists.txt
juce/app/core/: CMakeLists.txt
juce/app/core/include/xplorer/app/: ControlMetadata.hpp  ControlTable.hpp  MidiAutomationTable.hpp  ModulationHighlight.hpp  PageFamilyModel.hpp  ParameterBindingRegistry.hpp
juce/app/core/src/: ControlMetadata.cpp  ControlTable.cpp  GeneratedComboEnumMap.inc  GeneratedControlChangeNames.inc  GeneratedControlTable.inc  GeneratedEnumLabels.inc  GeneratedParameterNames.inc  MidiAutomationTable.cpp  ModulationHighlight.cpp  PageFamilyModel.cpp  ParameterBindingRegistry.cpp
juce/app/core/tools/: extract_control_table.py
juce/app/src/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  BoundControls.cpp  BoundControls.hpp  DesignTokens.hpp  Dialogs.cpp  Dialogs.hpp  DisplayPanel.cpp  DisplayPanel.hpp  FmSignalPath.hpp  FmSignalPathOverlay.cpp  FmSignalPathOverlay.hpp  JuceEventDispatcher.cpp  JuceEventDispatcher.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  ModMatrixPanel.cpp  ModMatrixPanel.hpp  PageFamilyBlock.cpp  PageFamilyBlock.hpp  PianoWindow.cpp  PianoWindow.hpp  ProgressWindow.cpp  ProgressWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp  VfdDisplayHelper.cpp  VfdDisplayHelper.hpp  XplorerLookAndFeel.cpp  XplorerLookAndFeel.hpp
juce/controller/: CMakeLists.txt
juce/controller/include/xplorer/controller/: AllDataDumpRequestState.hpp  LibraryInfo.hpp  PageSubPageHelper.hpp  XpanderController.hpp  XpanderControllerEvents.hpp
juce/controller/src/: LibraryInfo.cpp  PageSubPageHelper.cpp  XpanderController.cpp  XpanderControllerMidiEvents.cpp
juce/framework/: CMakeLists.txt
juce/framework/include/midiapp/: LibraryInfo.hpp
juce/framework/include/midiapp/controller/: AbstractController.hpp  DualDictionary.hpp  EventDispatcher.hpp
juce/framework/include/midiapp/model/: AbstractParameter.hpp  AbstractTone.hpp  OrderedParameterMap.hpp  ToneIO.hpp
juce/framework/include/midiapp/service/: FileUtils.hpp  Logger.hpp  SingleInstanceGuard.hpp
juce/framework/src/: AbstractController.cpp  AbstractControllerDevices.cpp  AbstractControllerWorker.cpp  AbstractParameter.cpp  AbstractTone.cpp  DualDictionary.cpp  FileUtils.cpp  LibraryInfo.cpp  Logger.cpp  OrderedParameterMap.cpp  SingleInstanceGuard.cpp
juce/midi/: CMakeLists.txt
juce/midi/include/xpl/midi/: JuceMidiBackend.hpp  LibraryInfo.hpp  MidiMessage.hpp  MidiPorts.hpp  MockMidiBackend.hpp  SysexStreamIterator.hpp
juce/midi/src/: LibraryInfo.cpp  MidiMessage.cpp  MockMidiBackend.cpp  SysexStreamIterator.cpp
juce/midi/src/juce/: JuceBackendInfo.cpp  JuceMidiBackend.cpp
juce/model/: CMakeLists.txt
juce/model/include/xplorer/model/: LibraryInfo.hpp  ModulationMatrixEntry.hpp  PacketizedBinary.hpp  XpanderConstants.hpp  XpanderParameter.hpp  XpanderSinglePatch.hpp  XpanderTone.hpp  XpanderToneIO.hpp
juce/model/src/: LibraryInfo.cpp  XpanderParameter.cpp  XpanderSinglePatch.cpp  XpanderTone.cpp  XpanderToneFixedParameters.inc  XpanderToneIO.cpp  XpanderToneModulationMatrix.cpp
juce/settings/: CMakeLists.txt
juce/settings/include/xplorer/settings/: AllUsersSettings.hpp  LibraryInfo.hpp  SettingsService.hpp
juce/settings/src/: AllUsersSettingsDefaults.cpp  DefaultAutomationTable.inc  LibraryInfo.cpp  XmlSettingsService.cpp
juce/tests/: CMakeLists.txt
juce/tests/app/: ControlTableTests.cpp  PageFamilyModelTests.cpp  ParameterBindingRegistryTests.cpp
juce/tests/controller/: XpanderControllerTests.cpp
juce/tests/fixtures/: README.md
juce/tests/framework/: AbstractControllerTests.cpp  AbstractParameterTests.cpp  AbstractToneTests.cpp  DualDictionaryTests.cpp  ServicesTests.cpp  TestParameter.hpp
juce/tests/midi/: JuceMidiBackendTests.cpp  MidiMessageTests.cpp  MockMidiBackendTests.cpp  SysexStreamIteratorTests.cpp
juce/tests/model/: XpanderParameterTests.cpp  XpanderSinglePatchTests.cpp  XpanderToneIOTests.cpp  XpanderToneTests.cpp
juce/tests/settings/: SettingsServiceTests.cpp
juce/tests/smoke/: SmokeTests.cpp
juce/tools/: design-tokens.yaml  generate_background_mockup.py  generate_design_tokens.py  generate_fixed_parameters.py
(+102 files in other folders)
